clap_derive/tests/ui/parse_empty_try_from_os.stderr
error: you must set parser for `try_from_os_str` explicitly
  --> $DIR/parse_empty_try_from_os.rs:14:18
   |
14 |     #[clap(parse(try_from_os_str))]
   |                  ^^^^^^^^^^^^^^^
